syntax = "proto3";

option go_package = "bitbucket.org/teamscript/scraper-protocol";

package scraper;

service Init {
  rpc SetRtCvLocation (SetRtCvLocationRequest) returns (Empty) {}
}

service Scraper {
  rpc CheckCredentials(CheckCredentialsRequest) returns (CheckCredentialsResponse) {}
}

message Empty {}

message SetRtCvLocationRequest {
  string basicAuthUsername = 1;
  string basicAuthPassword = 2;
  string serverLocation = 3;
}

message CheckCredentialsRequest {
  string username = 1;
  string password = 2;
}

message CheckCredentialsResponse {
  bool success = 1;
}
